description gap fixed

--- a/src/app/offices/offices.component.scss
+++ b/src/app/offices/offices.component.scss
@@ -7,6 +7,13 @@
     font-style: italic;
 }
 
+.min-h{
+    min-height: 21px;
+}
+.max-h{
+    max-height: 175px;
+}
+
 .logo{
     position: absolute;
     top: 20px;
